# salesanalyzer

./: =3.12  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/salesanalyzer/: index.doctree
docs/_build/doctrees/autoapi/salesanalyzer/predict_sales/: index.doctree
docs/_build/doctrees/autoapi/salesanalyzer/sales_summary_statistics/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/salesanalyzer/: predict_sales.html  sales_summary_statistics.html  segment_revenue_share.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/salesanalyzer/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/salesanalyzer/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/salesanalyzer/: __init__.py  predict_sales.py  sales_summary_statistics.py  salesanalyzer.py  segment_revenue_share.py
tests/: test_data.csv  test_predict_sales.py  test_sales_summary_statistics.py  test_salesanalyzer.py  test_segment_revenue_share.py
(+7 files in other folders)
