[tool.poetry]
name = "salesanalyzer"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Daria Khon, Franklin Aryee, Yeji Sohn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
